# stockfish

./: .gitignore  .lintception  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  data.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: api-docs.yml  ci.yml  codeql-analysis.yml  coverage-comment.yml  publish.yml
htmlcov/: class_index.html  d_b97127635d534a6a_models_py.html  function_index.html  index.html  status.json  z_b97127635d534a6a_models_py.html  z_b97127635d534a6a_types_py.html
stockfish/: models.py  types.py
tests/: test_models.py
tests/stockfish/: conftest.py  test_models.py
